# raytracer-cpp

./: .clang-format  .clang-format-include  .gitignore  Justfile  README.md  meson.build
.github/workflows/: meson.yml
src/raytracer/: main.cpp
src/raytracer/raytracer/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main.cpp  main.hpp  material.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
